[package]
name = "arinc424-rs"
description = "A library for reading and validating ARINC 424 data. Various revisions supported"
authors = ["Clifford Richardson"]
license = "MIT"
keywords = ["aviation", "navigation", "arinc", "424", "flight"]
repository = "https://github.com/birdhalfbaked/arinc424-rs"
version = "0.9.1"
edition = "2024"

[features]
default = ["rev18_faa"]
rev18 = []
rev18_faa = []
rev23 = []

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }
