[package]
name = "arinc424-rs"
description = "A library for reading and validating ARINC 424 data. Various revisions supported"
authors = ["Clifford Richardson"]
license = "MIT"
keywords = ["aviation", "navigation", "arinc", "424", "flight"]
repository = "https://github.com/birdhalfbaked/arinc424-rs"
version = "0.9.1"
edition = "2024"

[features]
default = ["rev18_faa"]
rev18 = []
rev18_faa = []
rev23 = []

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
criterion = "0.8"
memory-stats = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "parse_file"
harness = false
required-features = ["rev18_faa"]

[badges]
maintenance = { status = "actively-developed" }
